--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>client</title>
+    <!-- Stripe JS -->
+    <script src="https://js.stripe.com/v3/"></script>
   </head>
   <body>
     <div id="root"></div>
